--- a/app/src/main/res/layout/activity_expandable_list.xml
+++ b/app/src/main/res/layout/activity_expandable_list.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.crazyandroid.ExpandableListActivity">
+    tools:context="com.example.crazyandroid.activities.ExpandableListActivity">
     <ExpandableListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
