--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,4 +5,22 @@
         <item>Crazy Ajax</item>
         <item>Crazy XML</item>
     </string-array>
+    <string-array name="gender_name_list">
+        <item>男</item>
+        <item>女</item>
+    </string-array>
+    <string-array name="gender_value_list">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+    <string-array name="light_strength_list">
+        <item>低</item>
+        <item>中</item>
+        <item>高</item>
+    </string-array>
+    <string-array name="light_value_list">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
